[package]
name = "clio-auth"
description = "OAuth 2 helper library for CLI and desktop applications"
authors = ["Eric McIntyre <mac@riversoforion.com>"]
license = "MIT"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/riversoforion/clio-auth"
documentation = "https://docs.rs/clio-auth"
keywords = ["auth", "oauth2", "cli", "desktop"]

[dependencies]
log = "0.4"
oauth2 = "4.2"
open = "4.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.4"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.17"
mockall = "0.11.3"
anyhow = "1.0"
pretty_env_logger = "0.5"

[[example]]
name = "auth0"
