[package]
name = "clio-auth"
description = "OAuth 2 helper library for CLI and desktop applications"
authors = ["Eric McIntyre <mac@riversoforion.com>"]
license = "MIT"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/riversoforion/clio-auth"
documentation = "https://docs.rs/clio-auth"
keywords = ["auth", "oauth2", "cli", "desktop"]
categories = ["authentication", "command-line-interface"]

[dependencies]
log = "0.4.21"
oauth2 = "4.4.2"
open = "5.1.2"
tokio = { version = "1.37.0", features = ["full"] }
hyper = { version = "0.14.28", features = ["full"] }
url = "2.5.0"
thiserror = "1.0.60"

[dev-dependencies]
rstest = "0.17"
mockall = "0.11.3"
anyhow = "1.0"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["default", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "auth0"

[[example]]
name = "youtube"
