[package]
name = "clio-auth"
description = "OAuth 2 helper library for CLI and desktop applications"
authors = ["Eric McIntyre <mac@riversoforion.com>"]
license = "MIT"
version = "0.8.1"
edition = "2021"
repository = "https://github.com/riversoforion/clio-auth"
documentation = "https://docs.rs/clio-auth"
keywords = ["auth", "oauth2", "cli", "desktop"]
categories = ["authentication", "command-line-interface"]

[dependencies]
log = "0.4.21"
oauth2 = "4.4.2"
open = "5.1.4"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
poem = { version = "3.0.1" }
url = "2.5.2"
thiserror = "1.0.61"

[dev-dependencies]
rstest = "0.21.0"
mockall = "0.12.1"
anyhow = "1.0.86"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["default", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[[example]]
name = "auth0"

[[example]]
name = "youtube"
